--- a/package.json
+++ b/package.json
@@ -1,28 +1,20 @@
 {
-  "name": "demo",
-  "namespace": "Demo",
-  "version": "0.1.0",
-  "description": "ED demo",
+  "name": "ed",
+  "version": "0.0.1",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "http": "http-server ./docs -p 8000 -o",
-    "minify": "uglifyjs docs/scripts/*.js --compress --mangle -o dist/*.min.js",
-    "publish": "npm run pub:ts && npm run minify",
-    "pub:ts": "rollup -c",
-    "test": "npm run http",
-    "build": "rollup -cw"
+    "http": "http-server . -a localhost -p 8000 -o",
+    "test": "npm run http"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/NELCSU/ED.git"
   },
   "author": "NEL",
   "license": "MIT",
-  "devDependencies": {
-    "@types/d3": "^5.7.2",
-    "http-server": "^0.12.1",
-    "rollup": "^2.0.6",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-typescript2": "^0.26.0",
-    "typescript": "^3.8.3"
+  "bugs": {
+    "url": "https://github.com/NELCSU/ED/issues"
   },
-  "dependencies": {
-    "d3": "^5.15.0",
-    "d3-sankey": "^0.12.3"
-  }
+  "homepage": "https://github.com/NELCSU/ED#readme"
 }
