--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "http": "http-server ./docs -a localhost -p 5000 -o --ssl --key private/key.pem --cert private/cert.pem",
-    "test": "npm run http"
+    "http": "http-server ./docs -a localhost -p 8000 -o",
+    "https": "http-server ./docs -a localhost -p 5000 -o --ssl --key private/key.pem --cert private/cert.pem",
+    "test": "npm run https"
   },
   "repository": {
     "type": "git",
