--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
     "typeRoots": ["./node_modules/@types"]
   },
   "exclude": [
-    "src/**/*.test.ts",
+    "docs/js/lib/*.*",
     "node_modules"
   ],
   "include": [
