--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "homepage": "https://github.com/NELCSU/ED#readme",
   "dependencies": {
     "dragdealer": "^0.10.0",
+    "jszip": "^3.3.0",
+    "jszip-utils": "^0.1.0",
     "nvd3": "^1.8.6"
   },
   "devDependencies": {}
