--- a/package.json
+++ b/package.json
@@ -4,9 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "http": "http-server ./docs -a localhost -p 8000 -o",
-    "https": "http-server ./docs -a localhost -p 5000 -o --ssl --key private/key.pem --cert private/cert.pem",
-    "test": "npm run https"
+    "build": "npm-run-all --parallel compile-js compile-scss compile-css",
+    "compile-js": "rollup -cw",
+    "compile-scss": "sass src/css:docs/css --watch",
+    "compile-css": "postcss docs/css/**/*.css -r -c postcss.config.js",
+    "eslint": "eslint -c .eslintrc.json --ext .ts --ext .js ./src",
+    "https": "http-server ./docs -a localhost -p 5000 -o",
+    "http": "http-server ./docs -a localhost -p 5000 -o --ssl --key private/key.pem --cert private/cert.pem",
+    "test": "npm run https",
+    "test.compile": "jest --config jestconfig.json"
   },
   "repository": {
     "type": "git",
@@ -19,7 +25,9 @@
   },
   "homepage": "https://github.com/NELCSU/ED#readme",
   "dependencies": {
-    "d3-tip": "0.6.8",
+    "d3-format": "^1.4.4",
+    "d3-selection": "^1.4.1",
+    "d3-transition": "^1.3.2",
     "dragdealer": "^0.10.0",
     "es6-shim": "^0.35.5",
     "jquery": "^3.5.0",
@@ -30,8 +38,27 @@
     "underscore": "^1.10.2"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^11.1.0",
+    "@rollup/plugin-node-resolve": "^7.1.3",
+    "@types/d3": "^4.11.1",
+    "@types/jest": "^25.2.1",
+    "@typescript-eslint/eslint-plugin": "^2.28.0",
+    "@typescript-eslint/parser": "^2.28.0",
+    "autoprefixer": "^9.7.6",
     "bootstrap": "^3.4.1",
     "clean-css": "^4.2.3",
-    "less": "^3.11.1"
+    "eslint": "^6.8.0",
+    "eslint-plugin-jsdoc": "^23.0.0",
+    "jest": "^25.3.0",
+    "jsdoc": "^3.6.4",
+    "npm-run-all": "^4.1.5",
+    "postcss-cli": "^7.1.0",
+    "postcss-sorting": "^5.0.1",
+    "rollup": "^2.6.1",
+    "rollup-plugin-typescript2": "^0.27.0",
+    "sass": "^1.26.3",
+    "stylelint": "^13.3.2",
+    "ts-jest": "^25.3.1",
+    "typescript": "^3.8.3"
   }
 }
