--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,25 +1,26 @@
 {
   "compilerOptions": {
-    "allowJs": true,
+    "allowSyntheticDefaultImports": true,
     "baseUrl": "src",
-    "checkJs": true,
+    "composite": true,
     "esModuleInterop": true,
     "experimentalDecorators": true,
+    "incremental": true,
     "inlineSourceMap": true,
     "lib": ["esnext.array", "esnext", "es2017", "dom", "es5"],
-    "module": "none",
+    "module": "es2015",
     "moduleResolution": "node",
-    "noEmit": true,
     "removeComments": false,
     "strict": true,
-    "target": "es5",
-    "typeRoots": ["./node_modules/@types"]
+    "target": "es2015",
+    "tsBuildInfoFile": ".buildcache/default",
+    "typeRoots": ["./node_modules/@types", "./src/typings"]
   },
   "exclude": [
-    "docs/lib/*.*",
+    "src/**/*.test.ts",
     "node_modules"
   ],
   "include": [
-    "docs/js/*.*"
+    "src/**/*.ts"
   ]
 }
