--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
   "homepage": "https://github.com/NELCSU/ED#readme",
   "dependencies": {
     "d3-format": "^1.4.4",
+    "d3-request": "^1.0.6",
     "d3-selection": "^1.4.1",
     "d3-transition": "^1.3.2",
-    "dragdealer": "^0.10.0",
     "es6-shim": "^0.35.5",
     "jquery": "^3.5.0",
     "jszip": "^3.3.0",
