--- a/docs/json/config.json
+++ b/docs/json/config.json
@@ -78,7 +78,11 @@
   },
   "legend": {
     "colors": ["#FCC5C0", "#8DD3C7", "#BEBADA", "#B3DE69"],
-    "labels": ["Pathways Clinical Advisor", "Health Advisor", "Service Advisor", "Unknown/Not Applicable"]
+    "labels": ["Pathways Clinical Advisor", "Health Advisor", "Service Advisor", "Unknown/Not Applicable"],
+    "move": {
+      "x": 0,
+      "y": 0
+    }
   },
   "querystring": {
     "call": "",
