--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
   },
   "homepage": "https://github.com/NELCSU/ED#readme",
   "dependencies": {
+    "d3-array": "^2.4.0",
+    "d3-color": "^1.4.0",
     "d3-format": "^1.4.4",
+    "d3-interpolate": "^1.4.0",
     "d3-request": "^1.0.6",
     "d3-selection": "^1.4.1",
     "d3-transition": "^1.3.2",
@@ -42,6 +45,7 @@
     "@rollup/plugin-node-resolve": "^7.1.3",
     "@types/d3": "^4.11.1",
     "@types/jest": "^25.2.1",
+    "@types/jszip": "^3.1.7",
     "@typescript-eslint/eslint-plugin": "^2.28.0",
     "@typescript-eslint/parser": "^2.28.0",
     "autoprefixer": "^9.7.6",
