Add data quality to breakdwon view

--- a/docs/json/config.json
+++ b/docs/json/config.json
@@ -103,6 +103,7 @@
       "src": "./images/circle.svg", 
       "title": "Green status"
     },
+    "message": "",
     "red": {
       "src": "./images/triangle.svg", 
       "title": "Red status"
