--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "https": "http-server ./docs -a localhost -p 5000 -o",
     "http": "http-server ./docs -a localhost -p 5000 -o --ssl --key private/key.pem --cert private/cert.pem",
     "test": "npm run https",
-    "test.compile": "jest --config jestconfig.json"
+    "test.compile": "jest --config jestconfig.json",
+    "update-all": "npm run update-jszip",
+    "update-jszip": "ncp node_modules/jszip/dist docs/lib/jszip"
   },
   "repository": {
     "type": "git",
@@ -25,16 +27,19 @@
   },
   "homepage": "https://github.com/NELCSU/ED#readme",
   "dependencies": {
+    "@buckneri/js-lib-slicer": "^0.3.3",
     "d3-array": "^2.4.0",
+    "d3-axis": "^1.0.12",
     "d3-color": "^1.4.0",
     "d3-format": "^1.4.4",
     "d3-interpolate": "^1.4.0",
     "d3-request": "^1.0.6",
+    "d3-scale": "^3.2.1",
     "d3-selection": "^1.4.1",
     "d3-transition": "^1.3.2",
     "es6-shim": "^0.35.5",
     "jquery": "^3.5.0",
-    "jszip": "^3.3.0",
+    "jszip": "^3.4.0",
     "jszip-utils": "^0.1.0",
     "moment": "^2.24.0",
     "nvd3": "^1.8.6",
@@ -43,7 +48,8 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^11.1.0",
     "@rollup/plugin-node-resolve": "^7.1.3",
-    "@types/d3": "^4.11.1",
+    "@types/d3": "^5.7.2",
+    "@types/d3-request": "^1.0.5",
     "@types/jest": "^25.2.1",
     "@types/jszip": "^3.1.7",
     "@typescript-eslint/eslint-plugin": "^2.28.0",
@@ -51,8 +57,8 @@
     "autoprefixer": "^9.7.6",
     "clean-css": "^4.2.3",
     "eslint": "^6.8.0",
-    "eslint-plugin-jsdoc": "^23.0.1",
-    "jest": "^25.3.0",
+    "eslint-plugin-jsdoc": "^24.0.0",
+    "jest": "^25.4.0",
     "jsdoc": "^3.6.4",
     "npm-run-all": "^4.1.5",
     "postcss-cli": "^7.1.0",
