--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "@buckneri/js-lib-slicer": "^0.3.3",
     "d3-array": "^2.4.0",
     "d3-axis": "^1.0.12",
-    "d3-color": "^1.4.0",
+    "d3-color": "^1.4.1",
+    "d3-drag": "^1.2.5",
     "d3-format": "^1.4.4",
     "d3-interpolate": "^1.4.0",
     "d3-request": "^1.0.6",
@@ -52,8 +53,8 @@
     "@types/d3-request": "^1.0.5",
     "@types/jest": "^25.2.1",
     "@types/jszip": "^3.1.7",
-    "@typescript-eslint/eslint-plugin": "^2.28.0",
-    "@typescript-eslint/parser": "^2.28.0",
+    "@typescript-eslint/eslint-plugin": "^2.29.0",
+    "@typescript-eslint/parser": "^2.29.0",
     "autoprefixer": "^9.7.6",
     "clean-css": "^4.2.3",
     "eslint": "^6.8.0",
