--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
     "d3-array": "^2.4.0",
     "d3-axis": "^1.0.12",
     "d3-color": "^1.4.1",
+    "d3-delaunay": "^5.2.1",
     "d3-drag": "^1.2.5",
     "d3-format": "^1.4.4",
     "d3-interpolate": "^1.4.0",
+    "d3-polygon": "^1.0.6",
     "d3-request": "^1.0.6",
     "d3-scale": "^3.2.1",
     "d3-selection": "^1.4.1",
@@ -50,6 +52,7 @@
     "@rollup/plugin-commonjs": "^11.1.0",
     "@rollup/plugin-node-resolve": "^7.1.3",
     "@types/d3": "^5.7.2",
+    "@types/d3-delaunay": "^4.1.0",
     "@types/d3-request": "^1.0.5",
     "@types/jest": "^25.2.1",
     "@types/jszip": "^3.1.7",
