--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "compile-js": "rollup -cw",
     "compile-scss": "sass src/css:docs/css --no-source-map --watch",
     "compile-css": "postcss docs/css/index.css --no-map -o docs/css/index.css -c postcss.config.js --watch",
+    "dev-listglobals": "npm list -g --depth 0",
     "eslint": "eslint -c .eslintrc.json --ext .ts --ext .js ./src",
-    "https": "http-server ./docs -a localhost -p 5000 -o",
-    "http": "http-server ./docs -a localhost -p 5000 -o --ssl --key private/key.pem --cert private/cert.pem",
-    "test": "npm run https",
-    "test.compile": "jest --config jestconfig.json",
+    "imagemin": "imagemin src/images/* --out-dir=docs/images",
+    "serve": "browser-sync docs -w",
+    "test": "npm run serve",
+    "test-compile": "jest --config jestconfig.json",
     "update-all": "npm run update-jszip",
     "update-jszip": "ncp node_modules/jszip/dist docs/lib/jszip"
   },
@@ -36,6 +37,7 @@
     "d3-format": "^1.4.4",
     "d3-interpolate": "^1.4.0",
     "d3-polygon": "^1.0.6",
+    "d3-regression": "^1.3.4",
     "d3-request": "^1.0.6",
     "d3-scale": "^3.2.1",
     "d3-selection": "^1.4.1",
