--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "compile-scss": "sass src/css:docs/css --no-source-map --watch",
     "compile-css": "postcss docs/css/index.css --no-map -o docs/css/index.css -c postcss.config.js --watch",
     "dev-listglobals": "npm list -g --depth 0",
+    "dev-serve": "browser-sync docs -w",
     "eslint": "eslint -c .eslintrc.json --ext .ts --ext .js ./src",
+    "http": "http-server ./docs -a localhost -p 5000 -o",
+    "https": "http-server ./docs -a localhost -p 5000 -o --ssl --key private/key.pem --cert private/cert.pem",
     "imagemin": "imagemin src/images/* --out-dir=docs/images",
-    "serve": "browser-sync docs -w",
-    "test": "npm run serve",
+    "start": "pm2 start npm -- start-app -w",
+    "start-app": "npm run http",
+    "test": "npm run dev-serve",
     "test-compile": "jest --config jestconfig.json",
     "update-all": "npm run update-jszip",
     "update-jszip": "ncp node_modules/jszip/dist docs/lib/jszip"
@@ -69,7 +73,7 @@
     "npm-run-all": "^4.1.5",
     "postcss-cli": "^7.1.0",
     "postcss-sorting": "^5.0.1",
-    "rollup": "^2.7.1",
+    "rollup": "^2.7.2",
     "rollup-plugin-typescript2": "^0.27.0",
     "sass": "^1.26.3",
     "stylelint": "^13.3.3",
