--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "d3-polygon": "^1.0.6",
     "d3-regression": "^1.3.4",
     "d3-request": "^1.0.6",
+    "d3-sankey": "^0.12.3",
     "d3-scale": "^3.2.1",
     "d3-selection": "^1.4.1",
     "d3-transition": "^1.3.2",
@@ -60,6 +61,7 @@
     "@types/d3": "^5.7.2",
     "@types/d3-delaunay": "^4.1.0",
     "@types/d3-request": "^1.0.5",
+    "@types/d3-sankey": "^0.11.0",
     "@types/jest": "^25.2.1",
     "@types/jszip": "^3.1.7",
     "@typescript-eslint/eslint-plugin": "^2.29.0",
