--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "d3-request": "^1.0.6",
     "d3-sankey": "^0.12.3",
     "d3-scale": "^3.2.1",
+    "d3-scale-chromatic": "^1.5.0",
     "d3-selection": "^1.4.1",
     "d3-transition": "^1.3.2",
     "es6-shim": "^0.35.5",
