--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
   "homepage": "https://github.com/NELCSU/ED#readme",
   "dependencies": {
     "@buckneri/js-lib-slicer": "^0.3.3",
+    "@buckneri/spline": "^0.1.3",
+    "@buckneri/string": "^0.2.1",
     "d3-array": "^2.4.0",
     "d3-axis": "^1.0.12",
     "d3-color": "^1.4.1",
