--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "compile-js": "rollup -cw",
     "compile-scss": "sass src/css:docs/css --no-source-map --watch",
     "compile-css": "postcss docs/css/index.css --no-map -o docs/css/index.css -c postcss.config.js --watch",
-    "dev-listglobals": "npm list -g --depth 0",
+    "list-globals": "npm list -g --depth 0",
     "dev-serve": "browser-sync docs -w",
     "eslint": "eslint -c .eslintrc.json --ext .ts --ext .js ./src",
     "http": "http-server ./docs -a localhost -p 5000 -o",
@@ -34,7 +34,7 @@
   "homepage": "https://github.com/NELCSU/ED#readme",
   "dependencies": {
     "@buckneri/js-lib-slicer": "^0.3.3",
-    "@buckneri/spline": "^0.1.4",
+    "@buckneri/spline": "^0.2.0",
     "@buckneri/string": "^0.2.1",
     "d3-array": "^2.4.0",
     "d3-axis": "^1.0.12",
@@ -55,9 +55,7 @@
     "jquery": "^3.5.0",
     "jszip": "^3.4.0",
     "jszip-utils": "^0.1.0",
-    "moment": "^2.24.0",
-    "nvd3": "^1.8.6",
-    "underscore": "^1.10.2"
+    "nvd3": "^1.8.6"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^11.1.0",
@@ -74,12 +72,12 @@
     "clean-css": "^4.2.3",
     "eslint": "^6.8.0",
     "eslint-plugin-jsdoc": "^24.0.0",
-    "jest": "^25.5.2",
+    "jest": "^25.5.3",
     "jsdoc": "^3.6.4",
     "npm-run-all": "^4.1.5",
     "postcss-cli": "^7.1.1",
     "postcss-sorting": "^5.0.1",
-    "rollup": "^2.7.5",
+    "rollup": "^2.7.6",
     "rollup-plugin-typescript2": "^0.27.0",
     "sass": "^1.26.5",
     "stylelint": "^13.3.3",
