--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ed",
-  "version": "0.0.1",
+  "version": "0.2.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -33,8 +33,9 @@
   "homepage": "https://github.com/NELCSU/ED#readme",
   "dependencies": {
     "@buckneri/js-lib-slicer": "^0.3.3",
-    "@buckneri/spline": "^0.2.0",
-    "@buckneri/string": "^0.2.1",
+    "@buckneri/sankey": "^0.1.10",
+    "@buckneri/spline": "^0.3.0",
+    "@buckneri/string": "^0.3.9",
     "d3-array": "^2.4.0",
     "d3-axis": "^1.0.12",
     "d3-color": "^1.4.1",
@@ -51,7 +52,7 @@
     "d3-selection": "^1.4.1",
     "d3-transition": "^1.3.2",
     "es6-shim": "^0.35.5",
-    "jquery": "^3.5.0",
+    "jquery": "^3.5.1",
     "jszip": "^3.4.0",
     "jszip-utils": "^0.1.0"
   },
@@ -63,12 +64,12 @@
     "@types/d3-request": "^1.0.5",
     "@types/d3-sankey": "^0.11.0",
     "@types/jszip": "^3.1.7",
-    "@typescript-eslint/eslint-plugin": "^2.30.0",
-    "@typescript-eslint/parser": "^2.30.0",
+    "@typescript-eslint/eslint-plugin": "^2.31.0",
+    "@typescript-eslint/parser": "^2.31.0",
     "autoprefixer": "^9.7.6",
     "clean-css": "^4.2.3",
     "eslint": "^6.8.0",
-    "eslint-plugin-jsdoc": "^24.0.0",
+    "eslint-plugin-jsdoc": "^24.0.2",
     "jsdoc": "^3.6.4",
     "npm-run-all": "^4.1.5",
     "postcss-cli": "^7.1.1",
