--- a/package.json
+++ b/package.json
@@ -1,8 +1,59 @@
 {
-  "name": "ed",
-  "version": "0.2.1",
+  "author": "NEL",
+  "bugs": {
+    "url": "https://github.com/NELCSU/ED/issues"
+  },
+  "dependencies": {
+    "@buckneri/js-lib-slicer": "^0.3.3",
+    "@buckneri/sankey": "^0.1.10",
+    "@buckneri/spline": "^0.3.0",
+    "@buckneri/string": "^0.3.10",
+    "d3-array": "^2.4.0",
+    "d3-axis": "^1.0.12",
+    "d3-delaunay": "^5.2.1",
+    "d3-drag": "^1.2.5",
+    "d3-format": "^1.4.4",
+    "d3-polygon": "^1.0.6",
+    "d3-request": "^1.0.6",
+    "d3-scale": "^3.2.1",
+    "d3-scale-chromatic": "^1.5.0",
+    "d3-selection": "^1.4.1",
+    "d3-transition": "^1.3.2",
+    "jszip": "^3.4.0",
+    "jszip-utils": "^0.1.0"
+  },
   "description": "",
+  "devDependencies": {
+    "@rollup/plugin-commonjs": "^12.0.0",
+    "@rollup/plugin-node-resolve": "^8.0.0",
+    "@types/d3": "^5.7.2",
+    "@types/d3-delaunay": "^4.1.0",
+    "@types/d3-request": "^1.0.5",
+    "@types/jszip": "^3.4.1",
+    "@typescript-eslint/eslint-plugin": "^3.0.0",
+    "@typescript-eslint/parser": "^3.0.0",
+    "autoprefixer": "^9.8.0",
+    "clean-css": "^4.2.3",
+    "eslint": "^7.0.0",
+    "eslint-plugin-jsdoc": "^25.4.2",
+    "jsdoc": "^3.6.4",
+    "npm-run-all": "^4.1.5",
+    "postcss-cli": "^7.1.1",
+    "postcss-sorting": "^5.0.1",
+    "rollup": "^2.10.7",
+    "rollup-plugin-typescript2": "^0.27.1",
+    "sass": "^1.26.5",
+    "stylelint": "^13.5.0",
+    "typescript": "^3.9.3"
+  },
+  "homepage": "https://github.com/NELCSU/ED#readme",
+  "license": "MIT",
   "main": "index.js",
+  "name": "ed",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/NELCSU/ED.git"
+  },
   "scripts": {
     "build": "npm run compile-js",
     "build-full": "npm-run-all --parallel compile-js compile-scss compile-css",
@@ -21,63 +72,5 @@
     "update-all": "npm run update-jszip",
     "update-jszip": "ncp node_modules/jszip/dist docs/lib/jszip"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/NELCSU/ED.git"
-  },
-  "author": "NEL",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/NELCSU/ED/issues"
-  },
-  "homepage": "https://github.com/NELCSU/ED#readme",
-  "dependencies": {
-    "@buckneri/js-lib-slicer": "^0.3.3",
-    "@buckneri/sankey": "^0.1.10",
-    "@buckneri/spline": "^0.3.0",
-    "@buckneri/string": "^0.3.10",
-    "d3-array": "^2.4.0",
-    "d3-axis": "^1.0.12",
-    "d3-color": "^1.4.1",
-    "d3-delaunay": "^5.2.1",
-    "d3-drag": "^1.2.5",
-    "d3-format": "^1.4.4",
-    "d3-interpolate": "^1.4.0",
-    "d3-polygon": "^1.0.6",
-    "d3-regression": "^1.3.4",
-    "d3-request": "^1.0.6",
-    "d3-sankey": "^0.12.3",
-    "d3-scale": "^3.2.1",
-    "d3-scale-chromatic": "^1.5.0",
-    "d3-selection": "^1.4.1",
-    "d3-transition": "^1.3.2",
-    "es6-shim": "^0.35.5",
-    "jquery": "^3.5.1",
-    "jszip": "^3.4.0",
-    "jszip-utils": "^0.1.0"
-  },
-  "devDependencies": {
-    "@rollup/plugin-commonjs": "^12.0.0",
-    "@rollup/plugin-node-resolve": "^8.0.0",
-    "@types/d3": "^5.7.2",
-    "@types/d3-delaunay": "^4.1.0",
-    "@types/d3-request": "^1.0.5",
-    "@types/d3-sankey": "^0.11.0",
-    "@types/jszip": "^3.4.1",
-    "@typescript-eslint/eslint-plugin": "^3.0.0",
-    "@typescript-eslint/parser": "^3.0.0",
-    "autoprefixer": "^9.8.0",
-    "clean-css": "^4.2.3",
-    "eslint": "^7.0.0",
-    "eslint-plugin-jsdoc": "^25.4.2",
-    "jsdoc": "^3.6.4",
-    "npm-run-all": "^4.1.5",
-    "postcss-cli": "^7.1.1",
-    "postcss-sorting": "^5.0.1",
-    "rollup": "^2.10.5",
-    "rollup-plugin-typescript2": "^0.27.1",
-    "sass": "^1.26.5",
-    "stylelint": "^13.5.0",
-    "typescript": "^3.9.3"
-  }
+  "version": "0.2.1"
 }
