--- a/docs/json/config.json
+++ b/docs/json/config.json
@@ -25,7 +25,8 @@
     "move": { "x": true, "y": true },
     "opacity": { "high": 0.9, "low": 0.3 },
     "orientation": { "ltr": true, "ttb": false },
-    "organisations": ["INWL", "LAS", "LCW", "London", "NCL", "NEL", "ONWL", "SEL", "SWL"]
+    "organisations": ["INWL", "LAS", "LCW", "London", "NCL", "NEL", "ONWL", "SEL", "SWL"],
+    "playback": false
   },
   "legend": [
     {
