--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   },
   "dependencies": {
     "@buckneri/js-lib-slicer": "^0.3.3",
-    "@buckneri/sankey": "^0.1.12",
-    "@buckneri/spline": "^0.3.0",
+    "@buckneri/sankey": "^0.2.3",
+    "@buckneri/spline": "^0.4.0",
     "@buckneri/string": "^0.3.10",
+    "@popperjs/core": "^2.4.0",
     "d3-array": "^2.4.0",
     "d3-axis": "^1.0.12",
-    "d3-delaunay": "^5.2.1",
+    "d3-delaunay": "^5.3.0",
     "d3-drag": "^1.2.5",
     "d3-format": "^1.4.4",
     "d3-polygon": "^1.0.6",
@@ -20,7 +21,8 @@
     "d3-selection": "^1.4.1",
     "d3-transition": "^1.3.2",
     "jszip": "^3.4.0",
-    "jszip-utils": "^0.1.0"
+    "jszip-utils": "^0.1.0",
+    "tippy.js": "^6.2.3"
   },
   "description": "",
   "devDependencies": {
@@ -30,19 +32,19 @@
     "@types/d3-delaunay": "^4.1.0",
     "@types/d3-request": "^1.0.5",
     "@types/jszip": "^3.4.1",
-    "@typescript-eslint/eslint-plugin": "^3.0.1",
-    "@typescript-eslint/parser": "^3.0.1",
+    "@typescript-eslint/eslint-plugin": "^3.0.2",
+    "@typescript-eslint/parser": "^3.0.2",
     "autoprefixer": "^9.8.0",
     "clean-css": "^4.2.3",
     "eslint": "^7.1.0",
-    "eslint-plugin-jsdoc": "^25.4.3",
+    "eslint-plugin-jsdoc": "^26.0.1",
     "jsdoc": "^3.6.4",
     "npm-run-all": "^4.1.5",
     "postcss-cli": "^7.1.1",
     "postcss-sorting": "^5.0.1",
-    "rollup": "^2.10.9",
+    "rollup": "^2.12.0",
     "rollup-plugin-typescript2": "^0.27.1",
-    "sass": "^1.26.5",
+    "sass": "^1.26.7",
     "stylelint": "^13.5.0",
     "typescript": "^3.9.3"
   },
